@@ -1,5 +1,8 @@
 Revision history for File-Unpack
 
+	jw, Thu Sep  9 19:26:21 CEST 2010
+	Added .upx; we are testing all application/*-executable for upx to get the mime type.
+
 0.25	jw, Wed Sep  8 21:44:37 CEST 2010
 	Added .cpio, .deb, .cab, .7z
 	Removed stupid debug die in helper.
